--- a/Sprintr.client/index.html
+++ b/Sprintr.client/index.html
@@ -35,7 +35,7 @@
 </style>
 
 
-<body class="debug container-fluid p-0 m-0">
+<body class=" container-fluid p-0 m-0">
   <noscript>
     <strong>We're sorry but Sprintr.client doesn't work properly without JavaScript
       enabled. Please enable it to continue.</strong>
